Extent .env.example, rename exclude var to INCLUDE_ONLY_REGEX

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 GITLAB_URL=https://domain.org/
 GITLAB_TOKEN=<TOKEN>
-EXLUDE_REGEX=/^ochorocho/
+
+# Projects to include, defaults to /.*/ (all Project)
+# INCLUDE_ONLY_REGEX=/.*/
