Validate regex, make sure packages feature is enabled, create package for each tag

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GITLAB_URL=https://domain.org/
 GITLAB_TOKEN=<TOKEN>
 
-# Projects to include, defaults to /.*/ (all Project)
+# Projects to include. path_with_namespace used to match against Defaults to /.*/ (all Projects)
 # INCLUDE_ONLY_REGEX=/.*/
