--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
         "http-interop/http-factory-guzzle": "^1.0",
         "vlucas/phpdotenv": "^5.1",
         "symfony/console": "^5.1"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.38"
     }
 }
